CSS fix for body tag overflow

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -151,7 +151,3 @@ table, th, td {
 .queryTable{
   margin-left: 30px;
 }
-
-body{
-  overflow: scroll;
-}
